# palica3

./: .gitignore  README.adoc  design.adoc  dub.json  dub.selections.json
palica-rs/: Cargo.toml
palica-rs/sql/: schema1.sql
palica-rs/src/: cli.rs  coll_builder.rs  dblayer.rs  fsdbtime.rs  fslayer.rs  glob_filter.rs  lib.rs  sync.rs
sample-data/: img1.jxl  img1.xcf.xz
sample-data/lossless/: img1.jxl
source/: app.d
source/palica/: cmdtool.d  collbuilder.d  collsync.d  dbhelpers.d  dblayer.d  dblayer_impl.d  fsdb_helpers.d  fslayer.d  fslayer_impl.d  globfilter.d  helpers.d  sqlhelpers.d  tui_helpers.d
sql/: del_dir_entry1.sql  schema1.sql  thumbnails1.sql
vienik-rs/: Cargo.toml  README.adoc
vienik-rs/src/: example.rs  filter.rs  lib.rs  rich.rs  schema.rs  sorting.rs
