[package]
name = "palica"
description = "Media catalogue tool."
version = "0.1.0"
edition = "2021"
authors = ["Yury Benesh"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sqlite = "0.30.4"

[profile.release]
lto = true
strip = true
