[package]
name = "palica"
description = "Media catalogue tool."
version = "0.1.0"
edition = "2021"
authors = ["Yury Benesh"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.0", features = ["derive"] }
pcre = "0.2.3"
sqlite = "0.30.4"
thiserror = "1.0.40"


[profile.release]
lto = true
strip = true
opt-level = "z"
