[package]
name = "vienik-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
toml-datetime-compat = { version = "0.2.0", features = ["chrono"] }
